<resources>
    <string name="app_name">Virtual Stack</string>
    <string name="cancel">Return</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="vs_logo">VS logo</string>
    <string name="password">Password</string>
    <string name="enter_your_username_here">Enter your username here.</string>
    <string name="username">Username</string>
    <string name="enter_your_password_here">Enter your password here.</string>
    <string name="new_username">New Username</string>
    <string name="create">Create</string>
    <string name="my_virtual_card">My Virtual Card</string>
    <string name="present_my_card">Present My Card</string>
    <string name="scan_foreign_card">Scan Foreign Card</string>
    <string name="my_recent_contacts">My Recent Contacts</string>
    <string name="see_all_contacts">See All Contacts</string>
</resources>
