<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingPage">

    <ImageView
        android:id="@+id/VSlogo"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:contentDescription="@string/vs_logo"
        app:layout_constraintBottom_toTopOf="@+id/myCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:srcCompat="@drawable/virtualstacklogo" />

    <TextView
        android:id="@+id/myCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_virtual_card"
        app:layout_constraintBottom_toTopOf="@+id/editBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90999997" />

    <Button
        android:id="@+id/editBtn"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:text="Im a Card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/presentBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#009688"
        android:text="@string/present_my_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editBtn"
        app:layout_constraintVertical_bias="0.100000024" />

    <Button
        android:id="@+id/scanBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#009688"
        android:text="@string/scan_foreign_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/presentBtn"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/contactTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_recent_contacts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/contact1Btn"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFC107"
        android:text="Contact 1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactTitle"
        app:layout_constraintVertical_bias="0.050000012" />

    <Button
        android:id="@+id/contact2Btn"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFC107"
        android:text="Contact 2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact1Btn"
        app:layout_constraintVertical_bias="0.07999998" />

    <Button
        android:id="@+id/contactsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#009688"
        android:text="@string/see_all_contacts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact2Btn" />

</androidx.constraintlayout.widget.ConstraintLayout>